--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,6 +1,9 @@
 backend:
-  name: git-gateway
+  name: github
+  repo: assassinaj602/sunaina-web
   branch: main
+  auth_type: pkce
+  open_authoring: true
 
 media_folder: "assets/images/uploads"
 public_folder: "/assets/images/uploads"
